tests/error/lessThanEqualsInteger-wrong-1st-argument-unit.uplc
(program 1.0.0[[(builtin lessThanEqualsInteger)(con unit ())](con integer 10)])